--- a/index.html
+++ b/index.html
@@ -277,6 +277,10 @@
                 placeholder: 'Selecione uma opção',
                 allowClear: true
             });
+
+            $(document).on('select2:open', () => {
+                document.querySelector('.select2-search__field').focus();
+            });
         });
     </script>
 
